--- a/.github/workflows/merge-upstream.yml
+++ b/.github/workflows/merge-upstream.yml
@@ -35,8 +35,7 @@ jobs:
         git config --global user.name "KFERMercer"
 
     - name: Load upstream commits
-      run: git pull https://github.com/coolsnowwolf/lede.git --no-edit --strategy-option ours
-
+      run: git pull https://github.com/coolsnowwolf/lede.git --no-edit
     - name: Push Commits
       env:
         DOWNSTREAM_BRANCH: master
