--- a/.github/workflows/merge-upstream.yml
+++ b/.github/workflows/merge-upstream.yml
@@ -9,13 +9,14 @@
 name: Merge-upstream
 
 on:
-  push:
-    branches: 
-      - master
   schedule:
     - cron: 30 19 * * *
+  # push:
+  #   branches: 
+  #     - master
 
 jobs:
+
   merge:
 
     runs-on: ubuntu-latest
@@ -36,6 +37,7 @@ jobs:
 
     - name: Load upstream commits
       run: git pull https://github.com/coolsnowwolf/lede.git --no-edit
+
     - name: Push Commits
       env:
         DOWNSTREAM_BRANCH: master
